<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/editText2"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sample.loginform.first"
    android:background="@drawable/lg">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/t1"
        android:ems="10"
        android:id="@+id/editText1"
        android:width="320dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#aa0000" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginTop="25dp"
        android:id="@+id/editText2"
        android:width="320dp"
        android:hint="@string/t2"
        android:textColor="#93008a" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="24dp"
        android:id="@+id/editText3"
        android:width="320dp"
        android:hint="@string/t3"
        android:textColor="#155A02" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginTop="22dp"
        android:width="320dp"
        android:hint="password"
        android:textColor="#b65500" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:width="320dp"
        android:hint="password"
        android:textColor="#b65500" />

    <RadioGroup
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_below="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rgroup">

        <RadioButton
            android:text="@string/t6"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:id="@+id/radioButton7"
            android:checked="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            style="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton" />

        <RadioButton
            android:text="@string/t7"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:id="@+id/radioButton8"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </RadioGroup>

    <Button
        android:text="@string/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/t8"
        android:layout_below="@+id/editText5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
</ScrollView>